--- a/index.html
+++ b/index.html
@@ -67,13 +67,50 @@
 <!--- Start Course Section -->
 <div id="course" class="offset">
 	
+	<div class="col-12 narrow text-center">
+		<h1>
+			Nuno Theme Advanced Bootstrap Course</h1>
+			<p class="lead">Learn Bootstrap ....</p>
+			<a class="btn btn-secondary btn-md" href="#" target="_blank">Bootstrap Course</a>
+	</div>
 </div>
 <!--- End Course Section -->
 
 <!--- Start Features Section -->
 <div id="features" class="offset">
-	
-</div>
+
+<!--- Start Jumbotron -->
+<div class="jumbotron">
+<div class="narrow">
+
+	<div class="col-12">
+		<h3 class="heading">Features</h3>
+		<div class="heading-underline"></div>
+	</div>
+
+	<div class="row text-center">
+
+		<div class="col-md-4">
+			<div class="feature">
+				<i class=" fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
+				<h3>Custom Animation</h3>
+				<p>Animations...</p>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="feature">
+				<i class=" fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+				<h3>Content Slider</h3>
+				<p>Cotents...</p>
+			</div>
+		</div>
+
+	</div> <!--- End Row -->
+
+</div> <!---End Narrow-->
+</div><!--- End Jumbotron-->
+
 <!--- End Features Section -->
 
 <!--- Start Resources Section --->
