added in pictures need to customize

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Suite Life Of Frida Arenas</title>
+    <title>All About Kolbee</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fixed.css">
@@ -11,7 +11,7 @@
 
 <body data-spy="scroll" data-target="#navbarResponsive">
 
-<!--- Start Home Section-->>
+<!--- Start Home Section-->
 <div id="home">
 
 <!--- Navigation-->
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#course">Course</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="features">Feautures</a>
+            <a class="nav-link" href="features">Features</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#resources">Resources</a>
@@ -56,9 +56,9 @@
     </div>
 </div>
 <div class="caption text-center">
-    <h1>Welcome to Nuno</h1>
-    <h3>Udemy Bootstrap 4 Course</h3>
-    <a class="btn btn-outline-light btn-lg" href="#course">Get Started</a>
+    <h1>Welcome to My Life</h1>
+    <h3>KOLBEE HULSEY</h3>
+    <a class="btn btn-outline-light btn-lg" href="#course">Get To Know Me</a>
 
 </div>
 <!---End Landing Page Section-->
@@ -68,8 +68,8 @@
 <!---Start Course Section-->
 <div id="course" class="offset">
     <div class="col-12 narrow text-center">
-        <h1>Nuno Theme Advanced Bootstrap Course</h1>
-        <p class="lead">Learn Bootstrap by creating an advanced Bootstrap 4 Responsive Website Template from scratch, with no steps skipped!</p>
+        <h1>BABY KOLBEE</h1>
+        <p class="lead">When I was really young, toddler age, I felt like I was always a go getter. It was drilled into me to be super competitive and determined to be successful.</p>
         <a class="btn btn-secondary btn-md" href="http://bit.ly/advanced-bootstrap-course" target="_blank">Bootstrap Course</a>
     </div>
 
@@ -77,28 +77,28 @@
 <!--- End Course Section-->
 
 <!--- Start Features Section-->
-<div id="featers" class="offset">
+<div id="features" class="offset">
 <!--- Start Jumbotron -->
 <div class="jumbotron">
     <div class="narrow text-center">
 
 <div class="col-12">
-    <h3 class="heading">Feautures</h3>
+    <h3 class="heading">Features</h3>
     <div class="heading-underline"></div>
 </div>
     <div class="row text-center">
         <div class="col-md-4">
             <div class="feature">
                 <i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
-                <h3>Custom Animation</h3>
-                <p>Animate.css and Waypoint.js allow for smooth animations scrolling down the site </p>
+                <h3>Hi</h3>
+                <p></p>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="feature">
                 <i class="fas fa-sliders-h fa-4x" data-fa-transform=shrink-4.5 up-4.5></i>
-                <h3>Content Slider</h3>
+                <h3>You</h3>
                 <p>Owl.Carousel.js makes navigating content sliders seamless with it's content carousel navigation. </p>
             </div>
             </div>
@@ -106,7 +106,7 @@
 <div class="col-md-4">
             <div class="feature">
                 <i class="fab fa-wpforms fa-4x" data-fa-transform=shrink-4 up-5></i>
-                <h3>Contact Form</h3>
+                <h3>There!</h3>
                 <p>The Bootstrap HTML form will send directly to your email address using PHPMailer.php. </p>
             </div>
     </div><!--- End Row-->
@@ -115,7 +115,7 @@
     </div><!---End Narrow-->
 </div> <!---End Jumbotron-->
 </div>
-<!--- End Feautures Seaction-->
+<!--- End Features Seaction-->
 
 <!--- Start Resources Section-->
 <div id="resources" class="offset">
