--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="col-12 narrow text-center">
         <h1>BABY KOLBEE</h1>
         <p class="lead">When I was really young, toddler age, I felt like I was always a go getter. It was drilled into me to be super competitive and determined to be successful.</p>
-        <a class="btn btn-secondary btn-md" href="http://bit.ly/advanced-bootstrap-course" target="_blank">Bootstrap Course</a>
+        <a class="btn btn-secondary btn-md" href="#" target="_blank">CLICK HERE FOR BABY PICS</a>
     </div>
 
 </div>
@@ -90,24 +90,24 @@
         <div class="col-md-4">
             <div class="feature">
                 <i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
-                <h3>Hi</h3>
+                <h3>KOLBEE</h3>
                 <p></p>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="feature">
-                <i class="fas fa-sliders-h fa-4x" data-fa-transform=shrink-4.5 up-4.5></i>
-                <h3>You</h3>
-                <p>Owl.Carousel.js makes navigating content sliders seamless with it's content carousel navigation. </p>
+                <i class="fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+                <h3>SEVON</h3>
+                <p></p>
             </div>
             </div>
 
 <div class="col-md-4">
             <div class="feature">
-                <i class="fab fa-wpforms fa-4x" data-fa-transform=shrink-4 up-5></i>
-                <h3>There!</h3>
-                <p>The Bootstrap HTML form will send directly to your email address using PHPMailer.php. </p>
+                <i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-5"></i>
+                <h3>HULSEY</h3>
+                <p></p>
             </div>
     </div><!--- End Row-->
 
@@ -190,7 +190,7 @@
     <div class="col-md-6 clients"></div>
     <div class="row">
         <div class="col-md-4">
-            <img src="img/client1.png">
+            <img src="img/spongefluffy.jpg">
             <div class="col-md-8"></div>
             <blockquote>
                 <i class="fas fa-quote-left"></i>
@@ -204,7 +204,7 @@
     <div class="col-md-6 clients"></div>
     <div class="row">
         <div class="col-md-4">
-            <img src="img/client2.png">
+            <img src="img/yellowfry.jpg">
             <div class="col-md-8"></div>
             <blockquote>
                 <i class="fas fa-quote-left"></i>
@@ -237,9 +237,9 @@
     <div class="row justify-content-center">
         <div class="col-md-5 text-center">
             <img src="img/nuno.png">
-            <p>At our core is a collection of design and developmet solutions than represent everything your business needs to compete in the modern marketplace</p>
+            <p>Follow me on all of my social media platforms</p>
             <strong>Contact Info</strong>
-            <p>(888) 888-888<br>email@nuno.com</p>
+            <p>(888) 555-345<br>email@ksh.com</p>
             <a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>    
             <a href="" target="_blank"><i class="fab fa-instagram"></i></a> 
