added a few colors, need to make a color theme for it

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="narrow text-center">
 
 <div class="col-12">
-    <h3 class="heading">Features</h3>
+    <h3 class="heading">My Full Name</h3>
     <div class="heading-underline"></div>
 </div>
     <div class="row text-center">
@@ -124,7 +124,7 @@
     <div class="row dark text-center">
 
         <div class="col-12">
-            <h3 class="heading">Built With Care</h3>
+            <h3 class="heading">Get to know me</h3>
             <div class="heading-underline"></div>
             
         </div>
